# geocat-comp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  MANIFEST.in  README.md  asv.conf.json  geocat_cupy.yml  geocat_rapids.yml  meta.yaml  pyproject.toml  requirements.txt  sandbox.ipynb  setup.cfg  setup.py
.circleci/: build-libncomp.sh  build-ncomp.sh  config.yml  environment-dev-Darwin-3.6.yml  environment-dev-Darwin-3.7.yml  environment-dev-Darwin-3.8.yml  environment-dev-Linux-3.6.yml  environment-dev-Linux-3.7.yml  environment-dev-Linux-3.8.yml  install-circle.sh  run-checks.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml  upstream-failure-issue-template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  general_issue.yml  release.md  release.yaml  release.yml
.github/workflows/: actions.yml  asv-benchmarking.yml  asv-pr-commenter.yml  asv-pr.yml  build_test.yml  ci-release.yml  ci.yml  main.yml  pre-commit.yml  pypi.yaml  run-asv-pr.yml  upstream-dev-ci.yml  yapf.yml
benchmarks/: asv.conf.json  bench.py  bench_climatologies.py  bench_fourier.py  bench_interpolation.py  bench_meteorology.py  bench_spherical.py  bench_stats.py  benchmarks.py  import.py
build_envs/: asv-bench.yml  docs.yml  environment.yml  environment_Darwin.yml  environment_Linux.yml  min-deps.yml  upstream-dev-environment.yml
ci/: install-upstream-numpy.sh  install-upstream-uxarray.sh  install-upstream.sh
docs/: DOCS_CONTRIBUTING.md  api.rst  citation.rst  conda_environment.yml  conf.py  contrib.rst  examples.rst  gallery.yml  getting-started.rst  index.rst  installation.rst  release-notes.rst  support.rst  test.ipynb
docs/_static/: style.css  theme_overrides.css
docs/_templates/: layout.html
docs/examples/: calendar_average.ipynb  climatology_average.ipynb  fourier_filter.ipynb  fourier_filter_1d.ipynb  fourier_filter_example.ipynb  linint2_example.ipynb  linint2pts_example.ipynb  moc_globe_atl.ipynb  spectral_analysis.ipynb  specxy_anal.ipynb  template.ipynb  vimfc.ipynb
docs/getting_started/: categories.rst  examples.rst  index.rst  mini-examples.rst  overview.rst  quick-install.rst  support.rst
docs/internal_api/: index.rst
docs/user_api/: index.rst
geocat/comp/: __init__.py  climatologies.py  deprecated.py  dewtemp.py  fourier_filters.py  gc_util.py  gradient.py  interpolation.py  meteorology.py  polynomial.py  spherical.py  stats.py
test/: conftest.py  dpres_hybrid_ccm_output.nc  gradient_test_data.nc  gradient_test_results_latitude.nc  gradient_test_results_longitude.nc  grid_subset.nc  heat-index.csv  heat_index_output.nc  hybrid_subset.nc  interpolation_test_data.nc  interpolation_test_input_data.nc  interpolation_test_output_data.nc  max_daylight_test.nc  plev_subset.nc  satvpr_slope_fao56_output.nc  satvpr_tdew_fao56_output.nc  satvpr_temp_fao56_output.nc  scratch.py  skewt_params_output.nc  spherical_noise_input.nc  test_carrayify.py  test_clim_avg.py  test_climatologies.py  test_climatologies_unittest.py  test_climatology.py  test_climatology_codecov.py  test_correlation.py  test_crop.py  test_cython.py  test_dask.py  test_deltapressure  test_deltapressure.py  test_dewtemp.py  test_dewtemp_codecov.py  test_dewtemp_trh.py  test_dpres_plevel.py  test_eofunc.py  test_eofunc_codecov.py  test_eofunc_n.py  test_extra.py  (+35 more)
test/.ipynb_checkpoints/: test_meteorology-checkpoint.py
test/cython_tests/: test_cython.pyx  test_ncomp.pyx
test/data/: gradient_test_data.nc  pres_hybrid_ccm_output.nc  psychro_fao56_output.nc  sigma2hybrid_output.nc  vinth2p_ecmwf_output.nc
test/ncl_tests/: conwomap_5_test.ncl  skewt_params_test.ncl  test_dpres_hybrid_ccm.ncl  test_heat_index.ncl  test_max_daylight.ncl  test_pres_hybrid_ccm.ncl  test_psychro_fao56.ncl  test_satvpr_slope_fao56.ncl  test_satvpr_tdew_fao56.ncl  vinth2p_ecmwf.ncl  (+4 more)
(+49 files in other folders)
