[metadata]
name = geocat.comp
version = attr: setuptools_scm.get_version
author = GeoCAT Team
author_email = geocat@ucar.edu
description= GeoCAT-comp is computational component of the GeoCAT project and provides implementations of computational functions for analysis of geosciences data
long_description_content_type=text/markdown
long_description = file: README.md
url = https://geocat-comp.readthedocs.io
license = Apache-2.0
license_files = file: LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10, <3.13
packages = find_namespace:
setup_requires =
    setuptools_scm
    setuptools
    pip
install_requires =
    cf_xarray>=0.3.1
    numpy<2.0
    cftime
    eofs
    metpy
    scipy<1.15
    xarray
    xskillscore
    packaging
tests_require =
    pytest
    netcdf4
    geocat-datafiles

[options.packages.find]
where = .
include = geocat.*

[options.extras_require]
docs =
    ipykernel
    ipython
    sphinx_rtd_theme
    jupyter_client
    matplotlib-base
    sphinx-book-theme
    myst-nb
    sphinx-design
    geocat-datafiles
    geocat-viz
    nbsphinx
    netcdf4

[tool:pytest]
python_files = test_*.py
testpaths = test

[aliases]
test = pytest
